--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>CF AGRO</title>
-  <link rel="stylesheet" type="text/css" href="/dist/css/styles.css">
+  <title></title>
 </head>
 
 <body>
