--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <div id="root"></div>
 
   <!-- Main -->
-  <script type="text/javascript" src="/dist/bundle.js"></script>
+  <script type="text/javascript" src="http://localhost:8080/dist/bundle.js"></script>
 </body>
 </html>
