--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
   <div id="root"></div>
 
+  <!-- Dependencies -->
+  <script src="./node_modules/react/umd/react.development.js"></script>
+  <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+
   <!-- Main -->
-  <script type="text/javascript" src="/dist/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 
 </body>
 
