--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <script src="./assets/dist/react-dom.production.min.js"></script>-->
 
   <!-- Main -->
-  <script src="/dist/bundle.js"></script>
+  <script src="./assets/dist/bundle.js"></script>
 
 </body>
 </html>
